--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "platinum-elements": "PolymerElements/platinum-elements#^1.1.0",
     "neon-elements": "PolymerElements/neon-elements#^1.0.0",
     "page": "visionmedia/page.js#~1.6.3",
-    "firebase-element": "GoogleWebComponents/firebase-element#~1.0.9"
+    "firebase-element": "GoogleWebComponents/firebase-element#~1.0.9",
+    "paper-tags-input": "~1.2.2"
   },
   "devDependencies": {}
 }
